[gd_scene load_steps=8 format=3 uid="uid://bj4ffukoo0eey"]

[ext_resource type="Theme" uid="uid://dgnnlj6i8glhm" path="res://lessons_reference/06.changing_expressions/assets/main.theme" id="1_gbmfq"]
[ext_resource type="Script" path="res://lessons_reference/06.changing_expressions/changing_expressions.gd" id="2_1fmga"]
[ext_resource type="Shader" path="res://assets/sliding_background.gdshader" id="3_rpiwi"]
[ext_resource type="Texture2D" uid="uid://bnly1gkbxw6b5" path="res://assets/bubble_pattern.png" id="4_hhlbp"]
[ext_resource type="Texture2D" uid="uid://copkt78vgp37i" path="res://assets/sophia.png" id="5_pyylr"]
[ext_resource type="Texture2D" uid="uid://d000xjtr4iqtk" path="res://assets/emotion_regular.png" id="6_t4fma"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_efgpg"]
shader = ExtResource("3_rpiwi")
shader_parameter/bg_color = Color(0.980392, 0.94902, 0.72549, 1)
shader_parameter/pattern_color = Color(0.996078, 0.878431, 0.564706, 1)
shader_parameter/pattern_size = 256.0
shader_parameter/pattern_sampler = ExtResource("4_hhlbp")

[node name="Expressions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gbmfq")
script = ExtResource("2_1fmga")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_efgpg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Body" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_pyylr")
expand_mode = 1
stretch_mode = 5

[node name="Expression" type="TextureRect" parent="Body"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_t4fma")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 568.0
offset_bottom = 234.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonSophia" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sophia"

[node name="ButtonPink" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pink
"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonRegular" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Regular"

[node name="ButtonSad" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Sad"

[node name="ButtonHappy" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Happy"
